# Algebra-Lin

./: CMakeLists.txt  LICENSE  README.md
include/: matrix.h  vector.h
src/: main.cpp  matrix.cpp  matrix.h
